--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-ubication-serdan",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "expo": "~49.0.7",
+    "expo-location": "~16.1.0",
+    "expo-sqlite": "~11.3.2",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.3",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-router-native": "^6.15.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
